[gd_scene load_steps=4 format=2]

[ext_resource path="res://timeline/TimelineViewer.gd" type="Script" id=1]
[ext_resource path="res://timeline/timeline-divider-light.png" type="Texture" id=2]
[ext_resource path="res://timeline/TimelineDivider.gd" type="Script" id=3]

[node name="TimelineViewer" type="Node2D"]
script = ExtResource( 1 )

[node name="TimelineSlots" type="Node2D" parent="."]

[node name="TimelineDivider" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 12, 2 )
script = ExtResource( 3 )
